--- a/css/page7.css
+++ b/css/page7.css
@@ -8,6 +8,7 @@
 	margin-top: 400px;
 	position: relative;
 	z-index: 1000;
+	margin-bottom: 154px;
 	background-image: url(../images/Rectangle7.1.jpg);
 }	
 .description__text{
