--- a/css/page8.css
+++ b/css/page8.css
@@ -3,7 +3,6 @@
 	font-family: Yeseva One;
 	font-size: 20px;
 	line-height: 28px;
-	text-transform: uppercase;
 	color: #181818;
 }
 .page7-8--bottom{
@@ -11,10 +10,15 @@
 	font-size: 18px;
 	line-height: 29px;
 	color: #363636;
-	width: 753px;
-	height: 67px;
-	display: block;
-	margin: auto;
+	width: 763px;
+	margin-bottom: 37px;
+	text-align: center;
+	position: relative;
+	left: 23.5%;
+	right: 23.44%;
+	top: 54.67%;
+	bottom: 44.77%;
+	position: relative;
 }
 .page7-8--centr{
 	width: 165px;
@@ -23,19 +27,17 @@
 	display: block;
 }
 .page8__bg{
-	position: relative;
+	position: absolute;
 	width: 1440px;
 	height: 1616px;
 	background: #131313;
-	margin: 318px auto 0 auto;
-	
+	margin: auto;
+	top: 300px;
 }
 .page8{
-margin: auto;
-position: relative;
-
+	margin: auto;
+	position: relative;
 }
-
 .page8__rooms{
 	display: flex;
 	margin: auto;
@@ -46,32 +48,50 @@ position: relative;
 	width: 1440px;
 	height: 732px;
 
-	
 }
-.page8__image{
-	
-	justify-content:center;
-	margin-top: 39px;
-	margin-left: 100px;
-	margin-right: 10px;
+.page8__room{
 	position: relative;
+	margin-left: 30px;
+	margin-right: 30px;
+}
+.page8__image--between{
+	position: relative;
+	
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	-webkit-flex-direction: column;
+	-moz-flex-direction: column;
+	-ms-flex-direction: column;
+	-o-flex-direction: column;
+	flex-direction: column;
+	justify-content: flex-start;
+	font-size: 18px;
+	line-height: 25px;
+	text-align: center;
 }
 .page8__text{
-	display: flex;
 	background: #FFFFFF;
 	box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
-	left: 70.1%;
-	right: 11.34%;
-	top: 59.1%;
+	position: relative;
+	top: -50px;
+	left: 31px;
 	bottom: 37.98%;
 	font-family: Nunito Sans;
-	font-size: 13px;
 	line-height: 27px;
-	color: #959595;
-	border: 3px;
+	border: 3px solid black;
 	width: 330px;
-	margin: auto;
-}	
+	padding-bottom: 30px;
+}
+.page8__text--heading{
+	position: relative;
+	margin-left: 31px;
+	width: 100%;
+	height: 24px;
+	margin-bottom: auto;
+}
 .page8__button{
 	display: flex;
 	background: #E3B873;
@@ -87,5 +107,39 @@ position: relative;
 	color: #FFFFFF;
 	text-align: center;
 	margin: auto;
-
+	position: relative;
+	top: -75px;
+	left: -50px;
+}
+.page8__banner{
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	position: relative;
+	margin-top: 203px;
+	flex-direction: column;
+	justify-content: flex-start;
+}
+.page8__banner--left{
+	font-family: Yeseva One;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 27px;
+	line-height: 37px;
+	text-transform: uppercase;
+	color: #E3B873;
+}
+.page8__banner--right{
+	font-family: Nunito Sans;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 13px;
+	line-height: 19px;
+	color: #FFFFFF;
+}
+.page8__banner--banner{
+	width: 805px;
+	height: 421px;
 }
