--- a/css/page6.css
+++ b/css/page6.css
@@ -123,38 +123,37 @@ transition: all .3s ease-out;
 	text-transform: uppercase;
 	color: #FFFFFF;
 	background: #E3B873;
-box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.15);
-
-
+	box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.15);
+	margin-top:290px;
+	left: 100px;
+}
+.page6__vector{
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	-webkit-flex-direction: row;
+	-moz-flex-direction: row;
+	-ms-flex-direction: row;
+	-o-flex-direction: row;
+	flex-direction: row;
+	position: relative;
+	margin-top: 60px;
+	justify-content: flex-start;
 }
 .vector--pig{
-	display: flex;
-	flex-direction: row;
-	margin: auto;
-	position: relative;
-	width: 72px;
-	height: 72px;
-	background: #E3B873;
-	box-shadow: 0px 10px 20px rgba(237, 192, 120, 0.2);
-	border: 2px;
-	border-radius: 50%; 
-	margin-top: -450px;
-	margin-left: 900px;
-	background-image: url(../images/Vector.png);
-	background-repeat: no-repeat;
-	background-size: 55px 55px; 
+	
+	
 }
 .vector__text{
-	position: relative; 
 	font-family: Nunito Sans;
-	font-style: normal;
-	font-weight: normal;
 	font-size: 18px;
 	line-height: 26px;
 	color: #E3B873;
-	text-shadow: 0px 3px 10px rgba(227, 184, 115, 0.15);
-	width: 200px;
-	margin-left: 100px;
-	flex-wrap: wrap;
+	justify-content: flex-start;
+	
+	
+	
 
 }
