--- a/css/page8.css
+++ b/css/page8.css
@@ -1,145 +1,243 @@
-.page7-8{
-	text-align: center;
-	font-family: Yeseva One;
-	font-size: 20px;
-	line-height: 28px;
-	color: #181818;
+.page7-8 {
+    text-align: center;
+    font-family: Yeseva One;
+    font-size: 20px;
+    line-height: 28px;
+    color: #181818;
+    font-family: Yeseva One;
+    text-transform: uppercase;
+    color: #181818;
 }
-.page7-8--bottom{
-	font-family: Nunito Sans;
-	font-size: 18px;
-	line-height: 29px;
-	color: #363636;
-	width: 763px;
-	margin-bottom: 37px;
-	text-align: center;
-	position: relative;
-	left: 23.5%;
-	right: 23.44%;
-	top: 54.67%;
-	bottom: 44.77%;
-	position: relative;
+
+.page7-8--bottom {
+    font-family: Nunito Sans;
+    font-size: 18px;
+    line-height: 29px;
+    color: #363636;
+    margin-bottom: 37px;
+    text-align: center;
+    position: relative;
+    top: 54.67%;
+    bottom: 44.77%;
 }
-.page7-8--centr{
-	width: 165px;
-	height: 45px;
-	margin: auto;
-	display: block;
+
+.page7-8--centr {
+    height: 45px;
+    margin: auto;
+    display: block;
 }
-.page8__bg{
-	position: absolute;
-	width: 1440px;
-	height: 1616px;
-	background: #131313;
-	margin: auto;
-	top: 300px;
+
+.page8__bg {
+    position: absolute;
+    width: 1440px;
+    height: 1816px;
+    background: #131313;
+    margin: auto;
+    top: 300px;
 }
-.page8{
-	margin: auto;
-	position: relative;
+.page8 {
+    margin: auto;
+    position: relative;
+    width: 1440px;
+   
 }
-.page8__rooms{
-	display: flex;
-	margin: auto;
-	flex-direction: row;
-	position: relative;
-	width: 392px;
-	justify-content: center;
-	width: 1440px;
-	height: 732px;
+.page8__rooms {
+    display: flex;
+    margin: auto;
+    flex-direction: row;
+    position: relative;
+    width: 392px;
+    justify-content: center;
+    width: 1440px;
+    height: 732px;
+}
+.page8__room {
+    position: relative;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.page8__image--between {
+    position: relative;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
+    -o-flex-direction: column;
+    flex-direction: column;
+    justify-content: flex-start;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+}
+.page8__text {
+    background: #FFFFFF;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+    position: relative;
+    top: -50px;
+    left: 31px;
+    bottom: 37.98%;
+    font-family: Nunito Sans;
+    line-height: 27px;
+    border: 3px solid black;
+    width: 330px;
+    padding-bottom: 30px;
+}
+.page8__text--heading {
+    position: relative;
+    margin-left: 31px;
+    width: 100%;
+    height: 24px;
+    margin-bottom: auto;
+}
+.page8__button {
+    display: flex;
+    background: #E3B873;
+    box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.1);
+    width: 228px;
+    height: 54px;
+    font-family: Yeseva One;
+    font-size: 18px;
+    line-height: 25px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    text-align: center;
+    margin: auto;
+    position: relative;
+    top: -75px;
+    left: -50px;
+}
+/*<!-- здесь начало нового элемента -->*/
+.page8__steps {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    margin: auto;
+    width: 100%;
+    height: 1000px;
+    position: relative;
+}
+.page8__description {
+    width: auto;
+    position: relative;
+    width: 337px;
+    height: 340px;
+    font-family: Yeseva One;
+    color: #E3B873;
+    right: 137px;
+    left: 99px;
+}
+.page8__pretitle {
+    text-transform: uppercase font-family: Nuniro sans;
+    font-size: 13px;
+    line-height: 21.28px;
+    line-height: 120%;
+    text-align: left;
+    color: #FFFFFF;
+    margin-bottom: 18px;
+}
+.page8__title {
+    font-family: Yeseva One;
+    font-style: normal;
+    font-size: 27px;
+    line-height: 37.42px;
+    line-height: 120%;
+    text-align: left;
+    text-transform: uppercase;
+    margin-bottom: 92px;
+    color: #E3B873;
+    width: 180px;
+    height: 66px;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    -o-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-bottom: 92px;
+}
+.page8__title-step {
+    text-transform: uppercase;
+    font-family: Nunito Sans;
+    font-size: 18px;
+    line-height: 24.95px;
+    line-height: 120%;
+    text-align: left;
+    color: #FFFFFF;
+    margin-bottom: 22px;
+}
+.page8__title-text {
+    margin-bottom: 16px;
+    text-transform: uppercase;
+    width: 262px;
+    height: 42px;
+    margin-bottom: 16px;
+}
+.page8__text--left {
+    font-family: Nunito Sans;
+    font-size: 13px;
+    line-height: 26.6px;
+    text-align: left;
+    color: #FFFFFF;
+}
+.page8__picture {
+    box-sizing: border-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    margin: auto;
+    position: relative;
+    margin-top: 160px;
+    margin-left: 250px;
+    flex-wrap: wrap;
+}
+.page8__list {
+    font-family: Nunito Sans;
+    font-size: 13px;
+    line-height: 19px;
+    color: #FFFFFF;
+    position: relative;
+    width: 127px;
+    justify-content: flex-start;
+    margin-bottom: 36px;
+    font-family: Nunito Sans;
 
 }
-.page8__room{
-	position: relative;
-	margin-left: 30px;
-	margin-right: 30px;
+
+.page8__number {
+    font-family: Yeseva One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 21px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    bottom: 17px;
+    margin-botton: 17px;
 }
-.page8__image--between{
-	position: relative;
-	
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	-webkit-flex-direction: column;
-	-moz-flex-direction: column;
-	-ms-flex-direction: column;
-	-o-flex-direction: column;
-	flex-direction: column;
-	justify-content: flex-start;
-	font-size: 18px;
-	line-height: 25px;
-	text-align: center;
+.page8__departure {
+    display: block;
+    margin: auto;
+    margin-right: 200px;
 }
-.page8__text{
-	background: #FFFFFF;
-	box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
-	position: relative;
-	top: -50px;
-	left: 31px;
-	bottom: 37.98%;
-	font-family: Nunito Sans;
-	line-height: 27px;
-	border: 3px solid black;
-	width: 330px;
-	padding-bottom: 30px;
+.page8__departure1 {
+    display: block;
+    margin: auto;
+    margin-right: 99px;
+    width: 100px;
 }
-.page8__text--heading{
-	position: relative;
-	margin-left: 31px;
-	width: 100%;
-	height: 24px;
-	margin-bottom: auto;
-}
-.page8__button{
-	display: flex;
-	background: #E3B873;
-	box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.1);
-	width: 228px;
-	height: 54px;
-	font-family: Yeseva One;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 18px;
-	line-height: 25px;
-	text-transform: uppercase;
-	color: #FFFFFF;
-	text-align: center;
-	margin: auto;
-	position: relative;
-	top: -75px;
-	left: -50px;
-}
-.page8__banner{
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	position: relative;
-	margin-top: 203px;
-	flex-direction: column;
-	justify-content: flex-start;
-}
-.page8__banner--left{
-	font-family: Yeseva One;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 27px;
-	line-height: 37px;
-	text-transform: uppercase;
-	color: #E3B873;
-}
-.page8__banner--right{
-	font-family: Nunito Sans;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 13px;
-	line-height: 19px;
-	color: #FFFFFF;
-}
-.page8__banner--banner{
-	width: 805px;
-	height: 421px;
+.page8__img {
+    margin: auto;
+    top: -650px;
+    margin-left: 700px;
+    box-sizing: border-box;
+    position: relative;
+    width: 805px;
+    height: 421px;
 }
