--- a/css/page9.css
+++ b/css/page9.css
@@ -18,13 +18,11 @@
 	margin: auto;
 	color: #FFFFFF;
 	text-align: center;
-	width: 476px;
 	font-family: Yeseva One;
 	font-size: 20px;
 	line-height: 28px;
 	text-transform: uppercase;
 	color: #FFFFFF;
-	
 }
 .page9__title--botton{
 	font-family: Nunito Sans;
@@ -32,6 +30,12 @@
 	line-height: 29px;
 	text-align: center;
 	color: #FFFFFF;
+	width: 476px;
+	margin: auto;
+
+	
+	
+
 }
 .page9__portfolio{
 	display: -webkit-flex;
@@ -43,39 +47,13 @@
 	margin: auto;
 	flex-direction: row;
 	width: 1100px;
-	
+	right: 80px;
 }
 .page9__vector{
 	
 	left: 50px;
 	top: -40px;
 	position: relative;
-
-
-}
-.page9__text{
-	position: absolute;
-	left: 30.67%;
-	right: 30.53%;
-	top: 77.26%;
-	bottom: 21.4%;
-	font-family: Nunito Sans;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 18px;
-	line-height: 37px;
-	text-align: center;
-	color: #363636;
-	top: 800px;
-}
-
-
-
-
-
-
-
-	
 }
 .button9{
 	background: #E3B873;
@@ -87,30 +65,55 @@
 	position: relative;
 	bottom: 20px;
 }
-
 .fio{
-	Font Family: Yeseva One
-	Font Style: Regular
-	Font Size: 18px
-	Line Height: 24.95px
-	Line Height: 120%
-	Align: Center
-	Vertical Align: Top
-	Fill: Solid
+	font-size: 18px;
+	line-height: 24.95px;
+	line-height: 120%;
 	color: #181818;
 	width: 233px;
-	height: 137px;
-	background: #FFFFFF; 
-	border: 2px solid black;
-	Font Family: Yeseva One
+	height: 93px;
+	font-family: Yeseva One;
+	text-align: center; 
 	margin: auto;
 	position: relative;
-
-
+	top: -90px;
+	padding-top: 22px;
+	background: #FFFFFF;
+box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.05);
 }
 .profession{
 	width: 233px;
 	height: 44px;
-	border: 2px Solid #E3B873;
+	border: 2px solid  #E3B873;
 	background: #E3B873;
+	font-family: Yeseva One;
+	font-size: 13px;
+	line-height: 20px;
+	text-align: center;
+	text-transform: uppercase;
+	color: #FFFFFF;
+	margin-top: -90px;
+	margin-left: 20px;
+}
+.present-post{
+	font-family: Nunito Sans;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 25px;
+	text-align: center;
+	color: #959595;
+}
+.page9__text{
+	position: absolute;
+	left: 30.67%;
+	right: 30.53%;
+	top: 77.26%;
+	bottom: 21.4%;
+	font-family: Nunito Sans;
+	font-size: 18px;
+	line-height: 37px;
+	text-align: center;
+	color: #363636;
+	top: 700px;
 }
