--- a/css/page3.css
+++ b/css/page3.css
@@ -1,22 +1,69 @@
-.page3{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin: auto;
-	width: 1440px;
-	height: 542px;
-	background-image: url(../images/Снимок6.JPG);
-	background-size: 1440px 359px;
-	background-repeat: no-repeat;
-	background-position: repeat-x;
+.page3 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    width: 1440px;
+    height: 542px;
 }
-.page3__control{
-	font-family: Yeseva One;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 20px;
-	line-height: 28px;
-	text-align: center;
-	text-transform: uppercase;
-	color: #FFFFFF;
+
+.page3__background {
+    position: absolute;
+    z-index: -1;
+    background-image: url(../images/page3background.JPG);
+    width: 1440px;
+    height: 359px;
+    background-size: 1444px 359px;
+    background-repeat: no-repeat;
+    background-position: -3px -80px;
+    margin: auto;
+}
+
+.page3__control {
+    font-family: Yeseva One;
+    font-size: 20px;
+    line-height: 28px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    position: relative;
+    top: 31px;
+}
+.page3__image{
+    position: relative;
+    width: 33px;
+    height: 28px;
+    margin: auto;
+}
+.page3__image::before{
+    content: "";
+    width: 32px;
+    height: 2px;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translate(-100%, -50%);
+    background: #e3b873;
+    border-radius: 15px / 15px;
+
+
+}
+.page3__image::after{
+    content: "";
+    width: 32px;
+    height: 2px;
+    position: absolute;
+    left: 100%;
+    top: 50%;
+    transform: translate(0, -50%);
+    background: #e3b873;
+    border-radius: 15px / 15px;
+}
+    
+.page3__work{
+    width: 817px;
+    height: 434px;
+    top: -20px;
+    position: relative;
 }
