--- a/css/page9.css
+++ b/css/page9.css
@@ -32,10 +32,6 @@
 	color: #FFFFFF;
 	width: 476px;
 	margin: auto;
-
-	
-	
-
 }
 .page9__portfolio{
 	display: -webkit-flex;
@@ -116,4 +112,6 @@ box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.05);
 	text-align: center;
 	color: #363636;
 	top: 700px;
+	width: 538px;
+	height: 153px;
 }
