--- a/css/page5.css
+++ b/css/page5.css
@@ -41,6 +41,8 @@
 	line-height: 27px;
 	padding-left: 20px;
 	box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+	color: #959595;
+
 }
 .page5__button{
 	width: 228px;
