--- a/css/page6.css
+++ b/css/page6.css
@@ -1,161 +1,138 @@
-.page6{
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	margin: auto;
-	width: 1440px;
-	background-image: url(../images/Снимок14.JPG);
-	background-repeat: no-repeat;
-}
-.page6__free{
-	font-family: Nunito Sans;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 14px;
-	line-height: 19px;
-	color: #363636;
-	width: 508px;
-	height: 503px;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;
-	-webkit-flex-direction: column;
-	-moz-flex-direction: column;
-	-ms-flex-direction: column;
-	-o-flex-direction: column;
-	flex-direction: column;
-	list-style: ;
+.page6 {
+    display: flex;
+    margin: auto;
+    width: 1440px;
 }
 
-/*the copy*/
-.rounded {
-counter-reset: li; 
-list-style: none; 
-font: 14px "Trebuchet MS", "Lucida Sans";
-padding: 0;
-text-shadow: 0 1px 0 rgba(255,255,255,.5);
-}
-.rounded a {
-position: relative;
-display: block;
-padding: .4em .4em .4em 2em;
-margin: .5em 0;
-background: #DAD2CA;
-color: #444;
-text-decoration: none;
-border-radius: .3em;
-transition: .3s ease-out;
-}
-.rounded a:hover {background: #E9E4E0;}
-.rounded a:hover:before {transform: rotate(360deg);}
-.rounded a:before {
-content: counter(li);
-counter-increment: li;
-position: absolute;
-left: -1.3em;
-top: 50%;
-margin-top: -1.3em;
-background: #8FD4C1;
-height: 2em;
-width: 2em;
-line-height: 2em;
-border: .3em solid white;
-text-align: center;
-font-weight: bold;
-border-radius: 2em;
-transition: all .3s ease-out;
+.page6__free {
+    background-image: url(../images/Снимок14.JPG);
+    font-family: Nunito Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 19px;
+    color: #363636;
+    width: 702px;
+    height: 645px;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    justify-content: space-between;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
+    -o-flex-direction: column;
+    flex-direction: column;
+
 }
 
-/*the copy end*/
-
-
-.page6__form{
-	background: black;
+.page6__form {
+    background: black;
+    display: flex;
+    flex-direction: column;
+    font-family: Nunito Sans;
+    width: 499px;
+    height: 479px;
+    background: #131313;
+    box-shadow: 0px 30px 30px rgba(0, 0, 0, 0.05);
+    margin-left: 99px;
+    margin-right: 131px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	
+.page6__title {
+    font-family: Nunito Sans;
+    font-size: 18px;
+    line-height: 26px;
+    text-align: center;
+    color: #FFFFFF;
+    width: 297px;
+    height: 47px;
+    margin: auto;
+    margin-top: 28px;
 }
-.page6__form{
-	display: flex;
-	flex-direction: column;
-	font-family: Nunito Sans;
-	font-size: 18px;
-	line-height: 26px;
-	text-align: center;
-	color: #FFFFFF;
-	width: 508px;
-	height: 503px;
-	background-image: url(../images/Снимок17.JPG);
-	background: #131313;
-	box-shadow: 0px 30px 30px rgba(0, 0, 0, 0.05);
+
+.page6__survey {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.15);
+    margin-left: 48px;
+    margin-right: 48px;
+    text-align: left;
+    margin-top: 40px;
+    font-family: Nunito Sans;
+    font-size: 14px;
+    line-height: 23px;
+    color: #FFFFFF;
 }
-.page6__imput{
-	outline: none;
-	border-bottom: 2px;
-	
-	align-items: baseline;
+
+.page6__name {
+    font-family: Nunito Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 21px;
+    color: rgba(255, 255, 255, 0.5);
 }
-.page6__button{
-	align-items: flex-start;
-	position: relative;
-	width: 213px;
-	height: 51px;
-	font-family: Nunito Sans;
-	font-size: 13px;
-	line-height: 21px;
-	text-align: center;
-	text-transform: uppercase;
-	color: #FFFFFF;
-	background: #E3B873;
-	box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.15);
-	margin-top:290px;
-	left: 100px;
+
+.page6__input {
+	color: white;
 }
-.page6__vector{
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	-webkit-flex-direction: row;
-	-moz-flex-direction: row;
-	-ms-flex-direction: row;
-	-o-flex-direction: row;
-	flex-direction: row;
-	position: relative;
-	margin-top: 60px;
-	justify-content: flex-start;
+
+.page6__input::placeholder{
+	color: white;
 }
-.vector--pig{
-	
-	
+
+.page6__checkbox {
+    outline: none;
+    border-bottom: 2px;
+    align-items: baseline;
+    font-family: Nunito Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 163.68%;
+    color: #FFFFFF;
 }
-.vector__text{
-	font-family: Nunito Sans;
-	font-size: 18px;
-	line-height: 26px;
-	color: #E3B873;
-	justify-content: flex-start;
-	
-	
-	
+
+.page6__button {
+    font-family: Nunito Sans;
+    font-size: 13px;
+    line-height: 21px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    background: #E3B873;
+    box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.15);
+    margin-left: 200px;
+    margin-top: 27px;
+    width: 213px;
+    height: 51px;
+}
+
+.page6__vector {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -moz-flex-direction: row;
+    -ms-flex-direction: row;
+    -o-flex-direction: row;
+    flex-direction: row;
+    position: relative;
+    margin-top: 60px;
+    justify-content: flex-start;
+    bottom: -100px;
+}
+
+.vector__text {
+    font-family: Nunito Sans;
+    font-size: 18px;
+    line-height: 26px;
+    color: #E3B873;
+    justify-content: flex-start;
 
 }
