--- a/css/page6.css
+++ b/css/page6.css
@@ -2,6 +2,7 @@
     display: flex;
     margin: auto;
     width: 1440px;
+    flex-wrap: wrap;
 }
 
 .page6__free {
@@ -33,8 +34,8 @@
     display: flex;
     flex-direction: column;
     font-family: Nunito Sans;
-    width: 499px;
-    height: 479px;
+    width: 507px;
+    height: 503px;
     background: #131313;
     box-shadow: 0px 30px 30px rgba(0, 0, 0, 0.05);
     margin-left: 99px;
@@ -49,8 +50,8 @@
     color: #FFFFFF;
     width: 297px;
     height: 47px;
-    margin: auto;
-    margin-top: 28px;
+    justify-content: center;
+    margin: 27px 102px 0;
 }
 
 .page6__survey {
@@ -65,6 +66,9 @@
     font-size: 14px;
     line-height: 23px;
     color: #FFFFFF;
+    margin-bottom: 21px;
+
+
 }
 
 .page6__name {
@@ -76,41 +80,48 @@
     color: rgba(255, 255, 255, 0.5);
 }
 
-.page6__input {
-	color: white;
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+    background-color:rgb(228, 224, 13);
 }
-
+.page6__input {
+	color: rgb(233, 36, 36);
+}
 .page6__input::placeholder{
 	color: white;
 }
-
-.page6__checkbox {
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
     outline: none;
     border-bottom: 2px;
-    align-items: baseline;
     font-family: Nunito Sans;
-    font-style: normal;
-    font-weight: normal;
     font-size: 14px;
-    line-height: 163.68%;
     color: #FFFFFF;
+}
+.container .checkmark:after
+{
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 
 .page6__button {
-    font-family: Nunito Sans;
-    font-size: 13px;
-    line-height: 21px;
-    text-align: center;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    background: #E3B873;
     box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.15);
-    margin-left: 200px;
-    margin-top: 27px;
-    width: 213px;
-    height: 51px;
+    left: 200px;
+    top: 27px;
 }
-
 .page6__vector {
     display: -webkit-flex;
     display: -moz-flex;
@@ -123,16 +134,16 @@
     -o-flex-direction: row;
     flex-direction: row;
     position: relative;
-    margin-top: 60px;
     justify-content: flex-start;
-    bottom: -100px;
-}
-
+    left: 815px;
+    top: -117px;
+    }
 .vector__text {
     font-family: Nunito Sans;
     font-size: 18px;
     line-height: 26px;
     color: #E3B873;
     justify-content: flex-start;
-
+    padding-top: 27px;
+    text-shadow: 0px 3px 10px rgba(227, 184, 115, 0.15);
 }
